--- a/index.html
+++ b/index.html
@@ -19,34 +19,51 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Indicates a successful or positive action -->
-    [<button type="button" class="btn btn-success">Success</button>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+<div class="container">
+ <div class="row"> 
+  <div class="jumbotron col-md-12">
+  <h1>Thursday Demo Steak Store</h1>
+  <p>Bacon ipsum dolor amet pig salami biltong leberkas capicola beef pastrami jerky doner turkey beef ribs meatloaf tongue ball tip pork chop. Porchetta swine tri-tip pastrami, flank ham leberkas chuck pork chop corned beef jowl meatloaf ham hock. Brisket pancetta alcatra leberkas, meatloaf capicola jerky picanha chicken spare ribs pork porchetta pork chop sirloin. Pork loin sirloin chicken cupim, tri-tip spare ribs pork belly shankle hamburger capicola shoulder. Pork ham biltong jerky. Pork ribeye drumstick beef ribs. Tenderloin leberkas boudin tail bresaola chicken brisket frankfurter..</p>
+  
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="350x350 image">
+      <div class="caption">
+        <h3>Big Steak</h3>
+        <p>Rump turkey kevin, capicola pastrami tongue chicken hamburger cupim pork chop strip steak. Strip steak filet mignon prosciutto meatloaf venison ball tip. Pork ribeye kevin beef ribs leberkas alcatra shank swine.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy Big Steak</a> 
       </div>
-      <div class="modal-body">
-        ...
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="350x350 image">
+      <div class="caption">
+        <h3>Medium Steak</h3>
+        <p>Tongue pork loin shoulder landjaeger, chuck pork belly chicken kielbasa swine shank sirloin fatback cow. Pork chop tail short loin, venison ribeye cupim tongue strip steak kielbasa t-bone hamburger porchetta doner pork loin.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy Medium Steak</a> 
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="350x350 image">
+      <div class="caption">
+        <h3>Disappointing Steak</h3>
+        <p>Pancetta sausage doner, pork ham venison drumstick short ribs salami pork loin chicken frankfurter strip steak shankle sirloin. T-bone bacon sirloin, kielbasa kevin porchetta meatloaf biltong venison picanha ball tip.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy Sad, Sad Steak</a>
       </div>
     </div>
   </div>
 </div>
+</div>
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
